<resources>
    <string name="app_name">Inventory</string>
    <string name="item_name">Item Name</string>
    <string name="item_type">Item Type</string>
    <string name="item_amount">Item Amount</string>
    <string name="item_supplier">Item Supplier</string>
    <string name="item_picture">Item Picture</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>

    <string name="edit_Item">Edit Item</string>
    <string name="item_name_required">Item name required !</string>
    <string name="delete_question">Delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="cannot_take_picture">Cannot take picture !</string>
    <string name="discard_question">Discard ?</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="undo">Undo</string>
    <string name="delete_all_items">Delete all items ?</string>
    <string name="all_items_deleted">All Items Deleted</string>

    <string name="type">"Type: "</string>
    <string name="type_unknown">"Type: Unknown</string>
    <string name="amount">"Amount: "</string>
    <string name="amount_unknown">"Amount: Unknown</string>
    <string name="supplier">"Supplier: "</string>
    <string name="supplier_unknown">"Supplier: Unknown</string>

</resources>
